; ModuleID = '/home/carl/AnghaBench/linux/tools/lib/bpf/extr_bpf.c_bpf_map_delete_elem.c'
source_filename = "/home/carl/AnghaBench/linux/tools/lib/bpf/extr_bpf.c_bpf_map_delete_elem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.bpf_attr = type { i32 }

@BPF_MAP_DELETE_ELEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bpf_map_delete_elem(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %union.bpf_attr, align 4
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = call i32 @memset(%union.bpf_attr* %5, i32 0, i32 4)
  %7 = load i32, i32* %3, align 4
  %8 = bitcast %union.bpf_attr* %5 to i32*
  store i32 %7, i32* %8, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @ptr_to_u64(i8* %9)
  %11 = bitcast %union.bpf_attr* %5 to i32*
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* @BPF_MAP_DELETE_ELEM, align 4
  %13 = call i32 @sys_bpf(i32 %12, %union.bpf_attr* %5, i32 4)
  ret i32 %13
}

declare dso_local i32 @memset(%union.bpf_attr*, i32, i32) #1

declare dso_local i32 @ptr_to_u64(i8*) #1

declare dso_local i32 @sys_bpf(i32, %union.bpf_attr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
